--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <!-- TODO 4: Add titles/subtitles etc. -->
 <h1>Carol's Portfolio</h1>
 <hr />
-<a href="/public/movie.html"><h2>Movie Ranking Project</h2></a>
-<img src="/assets/images/moviesScreencapture.png" alt="movie screen capture" height="200px"/>
+<a href="./public/movie.html"><h2>Movie Ranking Project</h2></a>
+<img src="./assets/images/moviesScreencapture.png" alt="movie screen capture" height="200px"/>
 
 
-<a href="/public/birthday.html"><h2>Birthday Invite Project</h2></a>
-<img src="/assets/images/birthdayScreenshot.png" alt="movie screen capture" height="200px"/>
+<a href="./public/birthday.html"><h2>Birthday Invite Project</h2></a>
+<img src="./assets/images/birthdayScreenshot.png" alt="movie screen capture" height="200px"/>
 <hr />
 <a href="mailto:look@carol-greenberg.com"><p>Contact Me</p></a>
 
