updated back link

--- a/movie.html
+++ b/movie.html
@@ -1,5 +1,5 @@
 <!-- Write your code below -->
-<a href="/index.html">back</a>
+<a href="./index.html">back</a>
 <h1>The Best Movies According to Carol</h1>
 <h2>My top 3 movies of all time.</h2>
 <hr />
