updated link url

--- a/birthday.html
+++ b/birthday.html
@@ -1,4 +1,4 @@
-<a href="/index.html">back</a><h1>It's my Birthday!</h1>
+<a href="./index.html">back</a><h1>It's my Birthday!</h1>
 <h2>On April 7th</h2><!-- Example image URL -->
 <img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg" alt="birthday cake"/>
 <h3>What to bring</h3>
